docs: sable admin文档更新

--- a/_config.stellar.yml
+++ b/_config.stellar.yml
@@ -103,6 +103,8 @@ article:
   # related_posts:
   #   enable: true
   #   title: 您可能感兴趣的文章
+  category_color:
+    "vue": "#41B883"
 
 inject:
   head:
