--- a/_config.stellar.yml
+++ b/_config.stellar.yml
@@ -109,6 +109,8 @@ article:
 inject:
   head:
     - <link rel="stylesheet" href="https://npm.elemecdn.com/lxgw-wenkai-screen-webfont/style.css" media="print" onload="this.media='all'">
+    - <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7949385915241566"
+      crossorigin="anonymous"></script>
 
 # footer
 footer:
