去除背景图，有背景图会在刷新页面时有闪烁

--- a/_config.stellar.yml
+++ b/_config.stellar.yml
@@ -181,10 +181,10 @@ footer:
         </script>
     </div>
 style:
-  site:
-    background-image: url(/assets/about-cover-bg.jpg) # 未完全适配，慎用
-    blur-px: 100px
-    blur-bg: var(--alpha75)
+  # site:
+  #   background-image: url(/assets/about-cover-bg.jpg) # 未完全适配，慎用
+  #   blur-px: 100px
+  #   blur-bg: var(--alpha75)
   leftbar:
     background-image: url(/assets/about-cover-bg.jpg)
     blur: true
