chore: 去除一些导致在国内访问变慢的链接

--- a/_config.stellar.yml
+++ b/_config.stellar.yml
@@ -109,7 +109,7 @@ article:
 
 inject:
   head:
-    - <link rel="stylesheet" href="https://npm.elemecdn.com/lxgw-wenkai-screen-webfont/style.css" media="print" onload="this.media='all'">
+    # - <link rel="stylesheet" href="https://npm.elemecdn.com/lxgw-wenkai-screen-webfont/style.css" media="print" onload="this.media='all'">
     - <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7949385915241566"
       crossorigin="anonymous"></script>
 
@@ -147,17 +147,17 @@ footer:
       - "[licht](https://react.codeym.com/)"
       - "[vue devui](https://github.com/DevCloudFE/vue-devui)"
       - "[sable admin](https://github.com/Whbbit1999/sable)"
-      - "[sable chat ui](https://github.com/Whbbit1999/sable-chat-ui)"
+      # - "[sable chat ui](https://github.com/Whbbit1999/sable-chat-ui)"
   content: | # 支持 Markdown 格式
     本站由 [@Whbbit1999](/) 使用 [Stellar](https://github.com/xaoxuu/hexo-theme-stellar) 主题创建。
     本博客所有文章除特别声明外，均采用 [CC BY-NC-SA 4.0](https://creativecommons.org/licenses/by-nc-sa/4.0/) 许可协议，转载请注明出处。
     备案信息：[晋ICP备2020011938号-1](https://beian.miit.gov.cn/) | [晋公网安备 14062102000028号](http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=14062102000028)
     <div>
       <br />
-      <!--不蒜子计数器-->
-      <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
-      <!--添加一个访问量-->
-      <div>
+      <!-- 不蒜子计数器 -->
+      <!-- <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script> -->
+      <!-- 添加一个访问量 -->
+      <!-- <div>
         本"<span style="font-weight: bold;">页面</ a></span>"访问 <span id="busuanzi_value_page_pv" style="font-weight: bold;"></span> 次 | 👀总访问 <span id="busuanzi_value_site_pv" style="font-weight: bold;"></span>                次 | 🥷总访客 <span id="busuanzi_value_site_uv" style="font-weight: bold;"></span> 人
       </div>
       <div id="runtime_span"></div>
@@ -178,7 +178,7 @@ footer:
               runtime_span.innerHTML = "⏱️本站已运行 " + A + "天" + B + "小时" + C + "分" + D + "秒"
           }
           show_runtime();
-        </script>
+        </script> -->
     </div>
 style:
   # site:
@@ -188,10 +188,10 @@ style:
   leftbar:
     background-image: url(/assets/about-cover-bg.jpg)
     blur: true
-  darkmode: false # auto true false
+  darkmode: auto # auto true false
   font-family:
-    logo: '"LXGW WenKai Screen",system-ui, "Microsoft Yahei", "Segoe UI", -apple-system, Roboto, Ubuntu, "Helvetica Neue", Arial, "WenQuanYi Micro Hei", sans-serif'
-    body: '"LXGW WenKai Screen",system-ui, "Microsoft Yahei", "Segoe UI", -apple-system, Roboto, Ubuntu, "Helvetica Neue", Arial, "WenQuanYi Micro Hei", sans-serif'
+    logo: 'system-ui, "Microsoft Yahei", "Segoe UI", -apple-system, Roboto, Ubuntu, "Helvetica Neue", Arial, "WenQuanYi Micro Hei", sans-serif'
+    body: 'system-ui, "Microsoft Yahei", "Segoe UI", -apple-system, Roboto, Ubuntu, "Helvetica Neue", Arial, "WenQuanYi Micro Hei", sans-serif'
     code: 'Menlo, Monaco, Consolas, system-ui, "Courier New", monospace, sans-serif'
     codeblock: 'Menlo, Monaco, Consolas, system-ui, "Courier New", monospace, sans-serif'
   color:
