chore: 网站内容整理

--- a/source/_data/links/设计相关.yml
+++ b/source/_data/links/设计相关.yml
@@ -23,3 +23,5 @@
   screenshot: /assets/sites/default-cover.svg
   avatar: /assets/sites/default-logo.svg
   description: 快速查询ICON
+- title: 配色生成
+  url: https://randoma11y.com/
